# GCP_translation

./: README.md  Untitled.ipynb  fstrings.py  gpt_translation.ipynb  hf_translation.ipynb  importIndic.py  indicModal.py  modal_volume.py  pyproject.toml  romanized.ipynb  untitled1.py  untitled2.py  url_error.py
src/: Untitled.ipynb
tests/: untitled.py
